src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__passing_a_string_to_a_function.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [6 x i8] }

@main_instance = global %main zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"12345\00"

define i32 @func(i8* %0) {
entry:
  %func = alloca i32, align [filtered]
  %x = alloca [6 x i8], align [filtered]
  %bitcast = bitcast [6 x i8]* %x to i8*
  call void @llvm.memset.p0i8.i64(i8* align [filtered] %bitcast, i8 0, i64 6, i1 false)
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %bitcast, i8* align [filtered] %0, i64 5, i1 false)
  store i32 0, i32* %func, align [filtered]
  %func_ret = load i32, i32* %func, align [filtered]
  ret i32 %func_ret
}

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %1 = bitcast [6 x i8]* %a to i8*
  %call = call i32 @func(i8* %1)
  %call1 = call i32 @func(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @utf08_literal_0, i32 0, i32 0))
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn writeonly
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #0

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

attributes #0 = { argmemonly nofree nounwind willreturn writeonly }
attributes #1 = { argmemonly nofree nounwind willreturn }
