src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__return_variable_in_nested_call.snap
---
source: src/codegen/tests/function_tests.rs
expression: codegen(src)
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %x1 = alloca i32, align [filtered]
  %x2 = alloca i32, align [filtered]
  store i32 0, i32* %x1, align [filtered]
  store i32 0, i32* %x2, align [filtered]
  store i32 0, i32* %main, align [filtered]
  %0 = ptrtoint i32* %main to i64
  %call = call i32 @SMC_Read(i64 %0)
  store i32 %call, i32* %x1, align [filtered]
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}

define i32 @SMC_Read(i64 %0) {
entry:
  %SMC_Read = alloca i32, align [filtered]
  %ValAddr = alloca i64, align [filtered]
  store i64 %0, i64* %ValAddr, align [filtered]
  store i32 0, i32* %SMC_Read, align [filtered]
  %SMC_Read_ret = load i32, i32* %SMC_Read, align [filtered]
  ret i32 %SMC_Read_ret
}
