src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__simple_call.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32 }

@main_instance = global %main zeroinitializer

define i32 @func(i32 %0) {
entry:
  %func = alloca i32, align [filtered]
  %x = alloca i32, align [filtered]
  store i32 %0, i32* %x, align [filtered]
  store i32 0, i32* %func, align [filtered]
  %func_ret = load i32, i32* %func, align [filtered]
  ret i32 %func_ret
}

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %load_a = load i32, i32* %a, align [filtered]
  %call = call i32 @func(i32 %load_a)
  %call1 = call i32 @func(i32 1)
  %load_a2 = load i32, i32* %a, align [filtered]
  %tmpVar = add i32 1, %load_a2
  %call3 = call i32 @func(i32 %tmpVar)
  ret void
}
