src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__var_output_in_function_call.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i16 }

@main_instance = global %main { i16 4 }

define i32 @func(ptr %0) {
entry:
  %func = alloca i32, align [filtered]
  %o = alloca ptr, align [filtered]
  store ptr %0, ptr %o, align [filtered]
  store i32 0, ptr %func, align [filtered]
  %1 = load ptr, ptr %o, align [filtered]
  store i16 0, ptr %1, align [filtered]
  %deref = load ptr, ptr %o, align [filtered]
  store i16 6, ptr %deref, align [filtered]
  store i32 4, ptr %func, align [filtered]
  %func_ret = load i32, ptr %func, align [filtered]
  ret i32 %func_ret
}

define void @main(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %call = call i32 @func(ptr %x)
  ret void
}
